--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,14 +5,25 @@
     <title>Title</title>
 </head>
 <body>
-<p><a href="/hello">Greet the world!</a></p>
+<form action="/add" method="POST">
+    <p>Let's add a customer.</p>
 
-<form action="/hello" id="nameForm" method="GET">
     <div>
-        <label for="nameField">How should the app call you?</label>
-        <input id="nameField" name="myName">
-        <button>Greet me!</button>
+        <label for="firstName">First name:</label>
+        <input id="firstName" name="first" value="Homer">
     </div>
+    <div>
+        <label for="lastName">Last name:</label>
+        <input id="lastName" name="last" value="Simpson">
+    </div>
+    <div>
+        <button>Add customer</button>
+    </div>
+</form>
+
+
+<form action="/list" method="GET">
+    <button>List customers</button>
 </form>
 </body>
 </html>
